2016-01-04  Tobias Kaminski <kaminski@kr.tuwien.ac.at>
	* src/ClaspSolver.cpp: Fixed bug regarding option --claspdefernprop
	* src/UnfoundedSetChecker.cpp: Fixed bug in UFS check
	* dlvhex.cpp: Add options --ngminimization and --ngminimizationlimit
	to control the minimization of nogoods learned from input-output
	behavior.
	* src/ProgramCtx.cpp: Likewise.
	* src/ExternalLearningHelper.cpp: Likewise.
	* src/PluginInterface.cpp: Implementation of conflict nogood detection.
	* include/dlvhex2/PluginInterface.h: Likewise.
	* include/dlvhex2/ExternalLearningHelper.h: Likewise.
	* src/BaseModelGenerator.cpp: Likewise.
	* include/dlvhex2/BaseModelGenerator.h: Likewise.

2016-01-02  Christoph Redl <redl@kr.tuwien.ac.at>
	* dlvhex.cpp: Add options --csvinput and --csvoutput to allow
	easy processing of CSV files.
	* include/dlvhex2/AnswerSetPrinterCallback.h: Likewise.
	* src/AnswerSetPrinterCallback.cpp: Likewise.
	* include/dlvhex2/InputProvider.h: Likewise.
	* src/InputProvider.cpp: Likewise.

2015-05-06  Christoph Redl <redl@kr.tuwien.ac.at>
	* build_potassco.sh: Upgrade to clasp 3.1.2 and gringo 4.5.1.
	* checkout_build_potassco.sh: Likewise.
	* bootstrap-extra.sh: Likewise.
	* bootstrap-windows.sh: Upgrade to clasp 3.1.2.

2015-03-19  Peter Schueller <peter.schuller@marmara.edu.tr>
	* include/dlvhex2/Benchmarking.h: Implementation of nesting-aware
	benchmarking, which will not measure "pure" times that do not contain
	any time twice, even if called in nested function calls.
	* src/Benchmarking.cpp: Likewise.
	* src/ProgramCtx.cpp: Deactivating suspend of BenchmarkController which
	is no longer required due to nesting-aware new controller.

2015-03-18  Peter Schueller <peter.schuller@marmara.edu.tr>
	* src/ProgramCtx.cpp: Removing unused (only-write) "NestedHEX" option.
	* src/PythonPlugin.cpp: Likewise.
	* src/dlvhex.cpp: Likewise.

2015-03-12  Christoph Redl <redl@kr.tuwien.ac.at>
	* src/ClaspSolver.cpp: More efficient implementation of weak constraints.