@@ -1,3 +1,9 @@
+2016-01-05  Christoph Redl <redl@kr.tuwien.ac.at>
+        * build_potassco.sh: Upgrade to clasp 3.1.4 and gringo 4.5.4.
+        * checkout_build_potassco.sh: Likewise.
+        * bootstrap-extra.sh: Likewise.
+        * bootstrap-windows.sh: Upgrade to clasp 3.1.4.
+
 2016-01-04  Tobias Kaminski <kaminski@kr.tuwien.ac.at>
 	* src/ClaspSolver.cpp: Fixed bug regarding option --claspdefernprop
 	* src/UnfoundedSetChecker.cpp: Fixed bug in UFS check
